--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -513,8 +513,81 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.tw-container {
+  width: 100%;
+}
+
+@media (min-width: 475px) {
+  .tw-container {
+    max-width: 475px;
+  }
+}
+
+@media (min-width: 640px) {
+  .tw-container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .tw-container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .tw-container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .tw-container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .tw-container {
+    max-width: 1536px;
+  }
+}
+
+.tw-pointer-events-none {
+  pointer-events: none;
+}
+
+.tw-absolute {
+  position: absolute;
+}
+
+.tw-relative {
+  position: relative;
+}
+
+.tw-top-0 {
+  top: 0px;
+}
+
+.tw-left-0 {
+  left: 0px;
+}
+
+.tw-mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tw-block {
+  display: block;
+}
+
 .tw-flex {
   display: flex;
+}
+
+.tw-h-9 {
+  height: 2.25rem;
 }
 
 .tw-w-fit {
@@ -522,8 +595,16 @@ video {
   width: fit-content;
 }
 
+.tw-w-full {
+  width: 100%;
+}
+
 .tw-max-w-xs {
   max-width: 20rem;
+}
+
+.tw-grow {
+  flex-grow: 1;
 }
 
 .tw-flex-col {
@@ -538,12 +619,26 @@ video {
   justify-content: center;
 }
 
-.tw-gap-2 {
-  gap: 0.5rem;
-}
-
 .tw-whitespace-nowrap {
   white-space: nowrap;
+}
+
+.tw-border-b {
+  border-bottom-width: 1px;
+}
+
+.tw-border-solid {
+  border-style: solid;
+}
+
+.tw-border-b-gray-200 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.tw-bg-teal-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 253 250 / var(--tw-bg-opacity));
 }
 
 .tw-p-2 {
@@ -557,4 +652,63 @@ video {
 .tw-text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+@media (min-width: 475px) {
+  .xs\:tw-hidden {
+    display: none;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm\:tw-block {
+    display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:tw-container {
+    width: 100%;
+  }
+
+  @media (min-width: 475px) {
+    .md\:tw-container {
+      max-width: 475px;
+    }
+  }
+
+  @media (min-width: 640px) {
+    .md\:tw-container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .md\:tw-container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .md\:tw-container {
+      max-width: 1024px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .md\:tw-container {
+      max-width: 1280px;
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .md\:tw-container {
+      max-width: 1536px;
+    }
+  }
+
+  .md\:tw-px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
