--- a/src/components/hu-card/hu-card.styles.scss
+++ b/src/components/hu-card/hu-card.styles.scss
@@ -1,11 +1,5 @@
 .hu-card {
   border-radius: 0.5em;
-  border: 1px solid orange;
   overflow: hidden;
-  .hu-card-header {
-    .bg-section {
-      background-image: url('https://static.licdn.com/sc/h/55k1z8997gh8dwtihm11aajyq');
-      height: 58px;
-    }
-  }
+  box-shadow: 0px 0px 0px 1px rgb(0 0 0 / 13%);
 }
