impl: post card component

--- a/src/pages/main.layout.styles.scss
+++ b/src/pages/main.layout.styles.scss
@@ -24,7 +24,7 @@
   }
   .hu-center-main {
     grid-area: main;
-    border: 1px solid green;
+    // border: 1px solid green;
     // grid-column: 2 / span 2;
   }
   .hu-right-aside {
