--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply tw-text-2xl;
+  }
+  h2 {
+    @apply tw-text-xl;
+  }
+  h3 {
+    @apply tw-text-base;
+  }
+  h4 {
+    @apply tw-text-sm;
+  }
+}
+
 $base-color-d: #4d4a4b;
 
 :root,
