--- a/src/components/messaging/messaging.styles.scss
+++ b/src/components/messaging/messaging.styles.scss
@@ -4,6 +4,11 @@
   }
 }
 .hu-message-item {
+  &--preview {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
   &--info {
     width: calc(100% - 55px);
   }
